2011-04-15  Chang Shu  <cshu@webkit.org>

Reviewed by Alexey Proskuryakov.

        When a message with url embedded is added to console, the "file:" scheme
        and path should be stripped.
        https://bugs.webkit.org/show_bug.cgi?id=58665

        Unskip passed tests.

        * platform/mac-wk2/Skipped:
        * platform/qt-wk2/Skipped:
2011-04-15  Chang Shu  <cshu@webkit.org>

        Reviewed by Alexey Proskuryakov.

        When a message with url embedded is added to console, the "file:" scheme
        and path should be stripped.
        https://bugs.webkit.org/show_bug.cgi?id=58665

        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
        (WTR::lastFileURLPathComponent):
        (WTR::InjectedBundlePage::willAddMessageToConsole):

Canonical link: https://commits.webkit.org/73811@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84070 268f45cc-cd09-0410-ab3c-d52691b4dbfc